ref: getUserPosts route
